# pyclients

./: .dockerignore  .gitignore  README.md  commands.txt  pyproject.toml
clients/: cmd.py  connection.py  utils.py
clients/interface/: client.py  types.py
clients/kafka/: client.py  commands.py  model.py  stream_watcher.py
pyclients/: log_config.py  main.py  utils.py
pyclients/abc/: __init__.py  client.py  types.py
pyclients/cmd/: __init__.py  command.py  helpers.py  parent.py
pyclients/connection/: __init__.py  bridge.py  watchers.py  wrappers.py
pyclients/kafka/: client.py  commands.py  model.py
tests/: test_clients.py
