[tool.poetry]
name = "clients"
version = "0.1.0"
description = ""
authors = ["pyantony <agd10@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.10.4"
Fabric = "^2.7.0"
loguru = "^0.6.0"
toolz = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
