[tool.poetry]
name = "pyclients"
version = "0.2.3"
description = ""
authors = ["pyantony <agd10@hotmail.com>"]
readme = "README.md"
homepage = "https://github.com/PyAntony/pyclients/tree/main"
repository = "https://github.com/PyAntony/pyclients/tree/main"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.10.4"
Fabric = "^2.7.0"
loguru = "^0.6.0"
toolz = "^0.11.2"
isodate = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kafka-ls = 'pyclients.main:test_kakfa'
